--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  padding: 0;
+  padding-top: 56px; /* Adjust based on the height of your navbar */
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-color: #ff0000;
 }
+
+.navbar-custom {
+  background-color: #ffde00; 
 
 .pokemon-list {
   list-style-type: none;
@@ -18,7 +21,7 @@ body {
   margin: 0;
   width: 100%;
   max-width: 600px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   border-radius: 10px;
 }
 
