--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,23 @@ body {
   background-color: #ff0000;
 }
 
-.navbar-custom {
-  background-color: #ffde00; 
+.navbar {
+  background-color: #ffde00; /* Yellow background */
+}
+
+.navbar-brand {
+  color: #3b4cca; /* Blue text color */
+  font-size: 1.5rem; /* Adjust the font size */
+  font-weight: bold; /* Make the text bold */
+}
+
+.navbar-nav .nav-item .nav-link {
+  color: #3b4cca; /* Blue text color for nav links */
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: #1d2a6f; /* Darker blue for hover effect */
+}
 
 .pokemon-list {
   list-style-type: none;
@@ -21,7 +36,7 @@ body {
   margin: 0;
   width: 100%;
   max-width: 600px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
 
@@ -50,4 +65,44 @@ body {
   .pokemon-button {
     padding: 8px;
   }
+}
+
+.modal-content {
+  background-color: #fff3cd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ffeeba;
+}
+
+.modal-header {
+  background-color: #ffde00;
+  border-bottom: 1px solid #ffeeba;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.modal-title {
+  color: #3b4cca;
+}
+
+.modal-body {
+  padding: 20px;
+  text-align: center;
+}
+
+.modal-footer {
+  background-color: #ffde00;
+  border-top: 1px solid #ffeeba;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.modal-footer .btn-secondary {
+  background-color: #3b4cca;
+  color: #ffde00;
+  border: none;
+}
+
+.modal-footer .btn-secondary:hover {
+  background-color: #4e5dcf;
 }
