--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,30 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  padding-top: 56px; /* Adjust based on the height of your navbar */
+  padding-top: 56px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   min-height: 100vh;
   background-color: #ff0000;
 }
 
 .navbar {
-  background-color: #ffde00; /* Yellow background */
+  background-color: #ffde00;
 }
 
 .navbar-brand {
-  color: #3b4cca; /* Blue text color */
-  font-size: 1.5rem; /* Adjust the font size */
-  font-weight: bold; /* Make the text bold */
+  color: #3b4cca;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .navbar-nav .nav-item .nav-link {
-  color: #3b4cca; /* Blue text color for nav links */
+  color: #3b4cca;
 }
 
 .navbar-nav .nav-item .nav-link:hover {
-  color: #1d2a6f; /* Darker blue for hover effect */
+  color: #1d2a6f;
 }
 
 .pokemon-list {
@@ -33,11 +33,9 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 10px;
   padding: 10px;
-  margin: 0;
-  width: 100%;
-  max-width: 600px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
 }
 
 .pokemon-button {
